# support-triage-env

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  analyze_trajectories.py  inference.py  models.py  pyproject.toml  requirements.txt  train_baseline.py  validate-submission.sh  visualize_trajectory.py
examples/: bias_probe_eval.py  sample_trajectory.jsonl
scripts/: __init__.py  analyze_trajectories.py  train_baseline.py  visualize_trajectory.py
server/: __init__.py  app.py
support_triage_env/: .gitignore  README.md  __init__.py  client.py  models.py  pyproject.toml  requirements.txt
support_triage_env/scripts/: validate-submission.sh
support_triage_env/server/: app.py  generator.py  graders.py  gradio_ui.py  rubrics.py  triage_environment.py
support_triage_env/tests/: test_graders.py
