[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-support-triage-env"
version = "0.1.0"
description = "OpenEnv: customer support ticket triage (real-world agent benchmark)"
requires-python = ">=3.10"

dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
server = "support_triage_env.server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["support_triage_env*"]

[tool.setuptools]
include-package-data = true